--- a/src/proyect/donations/donationItem/DonationItem.css
+++ b/src/proyect/donations/donationItem/DonationItem.css
@@ -1,30 +1,48 @@
 .donation-item {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 15px;
-    border-bottom: 1px solid #ddd;
-    background-color: #fff;
-  }
-  
-  .donation-item:nth-child(even) {
-    background-color: #f9f9f9;
-  }
-  
-  .donor-name {
-    font-weight: bold;
-    color: #333;
-    flex: 1;
-  }
-  
-  .donation-amount {
-    color: #4CAF50;
-    flex: 0.5;
-    text-align: right;
-  }
-  
-  .project-name {
-    flex: 1;
-    text-align: right;
-    color: #555;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: #fff;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.donation-item-info{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.donation-item:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.donor-name {
+  font-weight: bold;
+  color: #333;
+  width: 20%;
+  text-align: left;
+}
+
+.donation-amount {
+  color: #4CAF50;
+  text-align: center;
+  width: 40%;
+}
+
+.project-name {
+  text-align: right;
+  color: #555;
+  width: 40%;
+}
+
+.donation-date {
+  color: #333;
+  width: 100%;
+  text-align: center;
+  border-top: 1px solid #ddd;
+  padding-top: 5px;
+}
