--- a/src/proyect/donations/donationList/DonationList.css
+++ b/src/proyect/donations/donationList/DonationList.css
@@ -3,14 +3,26 @@
     background-color: #f4f4f4;
   }
   
-  .donation-list {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
   
   h2 {
     text-align: center;
     color: #333;
   }
   
+.donation-container{
+  position: relative;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  max-height: 500px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.donation-list{
+  position: relative;
+  width: 100%;
+  display: flex;
+  max-height: 500px; /* Adjust the height as needed */
+  flex-wrap: wrap;
+  overflow: auto;
+}
