--- a/src/users/userItem/UserItem.css
+++ b/src/users/userItem/UserItem.css
@@ -30,4 +30,31 @@
     font-weight: bold;
     color: #4CAF50;
   }
+
+ .deactivate-button{
+    background-color: #f44336;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin-top: 10px;
+    cursor: pointer;
+  }
   
+  .deactivate-button:hover {
+    background-color: #d32f2f;
+ }
+
+ .reactivate-button{
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+  
+  .reactivate-button:hover {
+    background-color: #388E3C;
+ }
