--- a/src/users/userList/UserList.css
+++ b/src/users/userList/UserList.css
@@ -1,12 +1,14 @@
 .user-list-container {
     padding: 20px;
     background-color: #f4f4f4;
+    width: 50%;
+    height: 500px;
   }
   
   .user-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
   }
   
   h2 {
