--- a/src/createProject/CreateProject.css
+++ b/src/createProject/CreateProject.css
@@ -1,4 +1,5 @@
 body {
+    margin-top: 120px;
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
@@ -13,10 +14,14 @@ body {
   .create-container {
     width: 100%;
     max-width: 400px;
-    padding: 20px;
+    padding-top: 3px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 10px;
     background-color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    margin-top: 90px;
   }
   
   /* Título del formulario */
