--- a/src/admin/Admin.css
+++ b/src/admin/Admin.css
@@ -25,6 +25,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
+    max-height: 800px;
 }
 .donation-container{
     width: 50%;
@@ -33,3 +34,11 @@
 .proyect-container{
     width: 100%;
 }
+
+.user-list{
+    display: flex;
+    flex-direction: column;
+    max-height: 800px;
+    width: 70%;
+    overflow: hidden;
+}   
