--- a/src/mentorship/Mentorship.css
+++ b/src/mentorship/Mentorship.css
@@ -110,3 +110,26 @@
     margin-bottom: 20px;
   }
   
+.close {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    border-radius: 50px;
+    width: 60px;
+    height: 60px;
+    font-size: large;
+}
+
+.send-button{
+    display: flex;
+    justify-content: center;
+    width:100%;
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 8px;
+    background-color: #7fff6e;
+    border-width: 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    margin-top: 100px;
+}
