--- a/src/users/userList/UserList.css
+++ b/src/users/userList/UserList.css
@@ -1,20 +1,36 @@
 .user-list-container {
-    padding: 20px;
-    background-color: #f4f4f4;
-    width: 50%;
-    height: 500px;
-  }
-  
-  .user-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: center;
-  }
-  
-  h2 {
-    text-align: center;
-    color: #333;
-  }
-  
-  
+  padding: 20px;
+  background-color: #f4f4f4;
+  width: 50%;
+  height: 500px;
+}
+
+.user-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+}
+
+h2 {
+  text-align: center;
+  color: #333;
+}
+
+.user-container-admin-view {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  height: 40vh;
+  margin: 10px;
+  padding: 10px;
+}
+
+.user-list-admin{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: center;
+  overflow-x: auto; /* Added to enable horizontal scrolling */
+}
