--- a/src/admin/Admin.css
+++ b/src/admin/Admin.css
@@ -4,10 +4,27 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    margin-top:55%;
-    background-color: #f5f5f5;
+    margin-top: 400px;
 }
 
+.user-donations-container {
+    display: flex;
+    flex-direction: row;
+    gap: 20px; /* Añade espacio entre cada contenedor */
+    padding: 20px;
+    justify-content: space-between; /* Asegura que los contenedores estén separados */
+}
+
+.donations-container, .user-container, .proyecto-container{
+    padding-left: 70px;
+    padding-right: 70px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 50%; /* Define el ancho de cada columna para que se distribuyan bien */
+    margin-top: 0px;
+    margin-bottom: 500px;
+  }
 
 .proyect-container{
     position: relative;
@@ -25,6 +42,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
+    background-color: blueviolet;
 }
 .donation-container{
     width: 50%;
