--- a/src/admin/Admin.css
+++ b/src/admin/Admin.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    margin-top:35%;
+    margin-top:49%;
     background-color: #f5f5f5;
 }
 
@@ -43,7 +43,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
-    max-height: 800px;
+    height: 900px;
 }
 .donation-container{
     width: 50%;
@@ -56,7 +56,7 @@
 .user-list{
     display: flex;
     flex-direction: column;
-    max-height: 800px;
+    height: 100%;
     width: 70%;
     overflow: hidden;
 }   
