--- a/src/proyect/proyectItem/ProyectItem.css
+++ b/src/proyect/proyectItem/ProyectItem.css
@@ -55,3 +55,14 @@
     border-radius: 4px;
     cursor: pointer;
   }
+
+  .namePencil{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .namePencil h3{
+    margin-right: 10px;
+  }
