--- a/src/admin/Admin.css
+++ b/src/admin/Admin.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    margin-top:49%;
+    height: 100%;
+    margin-top:90%;
     background-color: #f5f5f5;
 }
 
@@ -16,7 +16,7 @@
     justify-content: space-between; /* Asegura que los contenedores estén separados */
 }
 
-.donations-container, .user-container, .proyecto-container{
+.donations-container, .user-container{
     padding-left: 70px;
     padding-right: 70px;
     background-color: #ffffff;
@@ -30,10 +30,10 @@
 .proyect-container{
     position: relative;
     padding: 20px;
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    max-height: 500px;
+    height: 600px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
@@ -42,21 +42,23 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
     height: 900px;
 }
 .donation-container{
     width: 50%;
 }
 
-.proyect-container{
+.user-list{
+    flex-direction: column;
+    width: 70%;
+}   
+
+.proyect-list-admin{
+    padding: 20px; /* Espacio entre el contenido y el scroll */
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    height: 70%;
+    overflow-y: auto; /* Activa el scroll vertical */
     width: 100%;
 }
-
-.user-list{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 70%;
-    overflow: hidden;
-}   
