--- a/src/users/userList/UserList.css
+++ b/src/users/userList/UserList.css
@@ -22,7 +22,7 @@ h2 {
   flex-direction: column;
   align-items: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  height: 40vh;
+  height:30%;
   margin: 10px;
   padding: 10px;
 }
