--- a/src/users/userProfile/UserProfile.css
+++ b/src/users/userProfile/UserProfile.css
@@ -123,4 +123,26 @@
   text-align: center;
 }
 
+.user-profile button {
+  width: 100%;
+  padding: 10px;
+  margin-top: 30px;
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
 
+.form1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.form1 button{
+  margin-top: 30px;
+}
